Prioritize packages from the right architecture

BUG: 369521